--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@ h1, h2 {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .header {
     box-shadow: 0px 10px 10px 0px rgba(176,176,176,1);
     background: rgba(0,152,254,1);
@@ -20,13 +25,9 @@ h1, h2 {
     padding: 12px;
 }
 
-.sub-header h2 a {
-    color: #fff;
-    text-decoration: none;
-}
-
 .content {
     padding: 12px;
+    min-height: 640px;    
 }
 
 .footer {
@@ -36,15 +37,21 @@ h1, h2 {
 
 .tile {
     padding: 12px;
-    width: 200px;
-    background: #000;
-    color: #fff;
+    width: 200px;    
+    color: #000;
     margin-bottom: 12px;
+    text-align: center;
 }
 
-.tile a {
+.home.tile {
+    background: #000;
+    width: 160px;
+    height: 240px;
+}
+
+a .home.tile {
     color: #fff;
-    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .tile img {
