--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
 }
 
-h1, h2 {
+.header h1, .sub-header h2 {
     color: #fff;
     margin: 0;
 }
@@ -19,6 +19,19 @@ a {
     padding: 12px;
 }
 
+.header a {
+    padding: 12px;
+}
+
+.header button {
+    background: rgba(55,51,51,1);    
+    padding: 12px;
+    color: #fff;
+    border: none;
+    box-shadow: 0px 2px 2px 0px rgba(0,0,0,1);
+    margin-left: 24px;
+}
+
 .sub-header {
     box-shadow: 0px 10px 10px 0px rgba(176,176,176,1);
     background: rgba(55,51,51,1);    
@@ -26,13 +39,8 @@ a {
 }
 
 .content {
-    padding: 12px;
+    padding: 24px;
     min-height: 640px;    
-}
-
-.footer {
-    background: #000;
-    color: #fff;
 }
 
 .tile {
@@ -57,6 +65,59 @@ a .home.tile {
 .tile img {
     width:80%;
     height: auto;
+}
+
+.tile h4 {
+    margin: 0;
+}
+
+
+.footer {
+    background: #000;
+    color: #fff;
+    min-height: 240px;
+    padding: 24px;
+}
+
+.footer ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 0;
+}
+
+.footer li {
+    list-style: none;
+    display: inline-block;    
+    color: #fff;    
+    padding: 4px 12px;
+    font-size: 10pt;
+}
+
+.footer .footer-links li {
+    border-right: solid 1px #fff;
+}
+
+.footer .footer-links li:first-child {
+    padding-left: 0;
+}
+
+.footer .footer-links li:last-child {
+    border: none;
+}
+
+.footer .copyright {
+    font-size: 8pt;
+    color: #fff;
+}
+
+.footer .social img {
+    width: 20px;
+}
+
+.footer .app-stores img {
+    width: 120px;
 }
 
 .flex-grid {
